crates/vm/tests/snapshots/loops__while_print_0_to_9.snap
---
source: crates/vm/tests/loops.rs
expression: snapshot
---
# Input:
i := 0
while i < 10:
  print i
  i += 1


# Result (success):
false

# Stdout:
0
1
2
3
4
5
6
7
8
9

